2003-09-10  Jens Gecius  <jens@gecius.de>
	* various	Included a patch from Koos van den
			Hout and Arthur van Leeuwen to
			enable vgrabbj to flip top to
			bottom. This enables upside-down
			mounting, e.g. on a ceiling.
	* various	Included a patch from David Austin
			to enable vgrabbj to take detailed
			control of the cams hardware 
			settings (e.g. brightness-adjustment,
			hue, etc.).
			This one needs further testing and
			adjustment to the options setup of
			previous versions. As of now this
			version might break your setup.

2003-07-28  Jens Gecius  <jens@gecius.de>
	* v_conf.c:	Fixed typo in help screen
			(thanks to Tobias Wolter who filed
			this bug to DBTS)
			Fixed bug causing segfault if not
			all optional libraries are present
			(thanks to Pascal Brisset for the
			patch! Sorry it took so long to
			apply it)

2002-10-15  Jens Gecius  <jens@gecius.de>

	* vgrabbj.h: 	Added option nousemmap needed for
			certain cams not switchable to
			palette RGB24 but unable to use
			mmap'ed memory.

	* v_options.h:	Fixed a small bug for ForcePalette.
			Improved img_size calculation.

2002-10-14  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Fixed nasty bug causing boolean
			commandline options not being parsed
			correctly.
			Added switch SwapRL (-R) to mirror
			the resulting image left-right.

2002-04-12  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Fixed bug for commandline switches
			on boolean values (segfault)
			Fixed possible wrong treatment of
			empty lines in conf

2002-04-02  Jens Gecius  <jens@gecius.de>

	* 		Final touch up, release 0.9.0
			with archive functionallity.

2002-03-29  Jens Gecius  <jens@gecius.de>

	* v_config.c:	rewrote/enhanced archive handling
			archivemax/archiveeach to manage
			archived pictures added.

2002-03-27  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	(after release) Fixed bug in ttf
			init. Changed internals slightly.

	* General: 	Update manuals, uploaded man's to